tests/ui/g-route-unprojectable.stderr
error[E0080]: evaluation panicked: Route unprojectable for this role: arms not mergeable, wire dispatch non-deterministic, and no dynamic policy annotation provided
   --> tests/ui/g-route-unprojectable.rs:152:14
    |
152 | > = project(&g::freeze(&ROUTE));
    |              ^^^^^^^^^^^^^^^^^ evaluation of `PASSIVE_PROGRAM` failed inside this call
    |
note: inside `freeze::<SeqSteps<StepCons<SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<100>, GenericCapToken<RouteControl<100, 0>>, CanonicalControl<RouteControl<100, 0>>>>, StepNil>, SeqSteps<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<42>, ()>>, StepNil>, StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<99>, ()>>, SeqSteps<StepCons<SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<101>, GenericCapToken<RouteControl<101, 0>>, CanonicalControl<RouteControl<101, 0>>>>, StepNil>, SeqSteps<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<42>, ()>>, StepNil>, SeqSteps<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<99>, ()>>, StepNil>, StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<77>, ()>>, StepNil>>>>>>>>`
   --> src/global/program.rs
    |
    |     validate_all_roles(&summary);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::seal::validate_all_roles`
   --> src/global/compiled/seal.rs
    |
    |     ProjectionSeal::<1>::validate_compiled_layout(summary.view());
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::seal::ProjectionSeal::<1>::validate_compiled_layout`
   --> src/global/compiled/seal.rs
    |
    |         Self::validate_route_projection_guarantees(view);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::seal::ProjectionSeal::<1>::validate_route_projection_guarantees`
   --> src/global/compiled/seal.rs
    |
    | /                 Self::validate_route_scope(
    | |                     view,
    | |                     scope_markers,
    | |                     marker.scope_id,
    | |                     marker.controller_role,
    | |                     marker.linger,
    | |                 );
    | |_________________^
note: inside `hibana::global::compiled::seal::ProjectionSeal::<1>::validate_route_scope`
   --> src/global/compiled/seal.rs
    |
    | / ...   panic!(
    | | ...       "Route unprojectable for this role: arms not mergeable, wire dispatch non-deterministic, and no dynamic policy annotation provi...
    | | ...   );
    | |_______^ the failure occurred here

note: erroneous constant encountered
   --> tests/ui/g-route-unprojectable.rs:152:13
    |
152 | > = project(&g::freeze(&ROUTE));
    |             ^^^^^^^^^^^^^^^^^^
